test/litecheck/cases/require_invalid-1.expected
invalid REQUIRE directive: `command ()', caused by
(loaded):1:11: [syntax error] expected `{'
command ()
          ^

